--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
+		<link rel="manifest" href="%svelte.assets%/manifest.json">
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="icon" href="%svelte.assets%/favicon.svg" />
 		<link rel="stylesheet" href="%svelte.assets%/index.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#fff8dd" />
 		%svelte.head%
 	</head>
 	<body>
