--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="manifest" href="/manifest.json">
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="icon" href="/favicon.svg" />
+		<link rel="apple-touch-icon" href="/icon-192.png"/>
 		<link rel="stylesheet" href="/index.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#fff8dd" />
